5/26 - Fixed investment decimal model format  to be displayed correctly on page
- TODO: Fix .0 defult when there is not 2 decimals

--- a/papertrade_website/homeapp/templates/home.html
+++ b/papertrade_website/homeapp/templates/home.html
@@ -77,8 +77,10 @@
         </div>
         <div style="width: 60px;"></div>
         <div class="ml-auto">
-            <button class="btn btn-success w-100 border" style="margin-top: 30px; margin-bottom: 20px; border-width: 3px !important; 
-                border-color: lightgreen !important; height: 70px; border-radius: 16px;">INVEST</button>
+            <a href="/investments/">
+                <button class="btn btn-success w-100 border" style="margin-top: 30px; margin-bottom: 20px; border-width: 3px !important; 
+                    border-color: lightgreen !important; height: 70px; border-radius: 16px;">INVEST</button>
+            </a>
             <div class="container border" style="border-width: 3px !important; border-radius: 20px;">
                 <div class="dropdown"
                     style="display: flex; justify-content: center; width: 100%; margin-top: 15px; margin-bottom: 15px;">
