--- a/papertrade_website/investments/templates/investments.html
+++ b/papertrade_website/investments/templates/investments.html
@@ -2,14 +2,9 @@
 {% block content %}
 
 <style>
-    .spinner {
-        display: flex;
-        align-items: center;
-    }
-    .spinner input {
-        text-align: center;
-        max-width: 60px;
-        margin: 0 6px;
+    .input-group input {
+        text-align: right;
+        max-width: 200px;
     }
 </style>
 
@@ -18,14 +13,11 @@
         <div class="row">
             <div class="col">
                 <div class="container">
-                    <div class="col border">
-                        <div class="row border">
-                            <h4>Cash</h4>
-                            <div class="spinner">
-                                <button class="btn btn-danger" id="decrement">-</button>
-                                <input type="number" id="spinner-value" class="form-control" value="0" min="0" max="100"
-                                    readonly>
-                                <button class="btn btn-success" id="increment">+</button>
+                    <div class="col">
+                        <div class="container">
+                            <div class="row">
+                                <h4>Cash</h4>
+                            
                             </div>
                         </div>
                         <p>Cash assets: ${{cash_amount}}</p>
@@ -44,7 +36,22 @@
             <div class="col">
                 <form method="post" action="{% url 'Investments'%}">
                     {% csrf_token %}
-                    <div class="form-group margin-right-5px">
+                    <div class="form-group">
+                        <label for="cash-insert">Add Cash</label>
+                        <div class="input-group">
+                            <div class="input-group-prepend">
+                                <span class="input-group-text">$</span>
+                            </div>
+                            <input type="text" id="cash-input" class="form-control" value="0" min="0" maxlength="16">
+                            <div class="input-group-append">
+                                <span class="input-group-text">.00</span>
+                            </div>
+                            <div class="col">
+                                <button class="btn btn-success" id="increment">Add cash</button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="form-group">
                         <label for="ticker">Ticker Search</label>
                         <div class="form-row">
                             <div class="col">
@@ -58,10 +65,24 @@
                     </div>
                 </form>
                 <h4>Owned stocks</h4>
+                <table class="table">
+                    <thead>
+                        <tr>
+                            <th scope="col">Ticker</th>
+                            <th scope="col">Price</th>
+                            <th scope="col">Value</th>
+                            <th scope="col">% Change</th>
+                            <th scope="col">Trend</th>
+                        </tr>
+                    </thead>
             </div>
         </div>
     </div>
 </div>
+
+<script>
+    
+</script>
 
 
 {% endblock %}
