6/3 - Made it so the user could add a negative cash value so they would have more control over their cash values
- TODO: Add form errors to html template

--- a/papertrade_website/investments/templates/investments.html
+++ b/papertrade_website/investments/templates/investments.html
@@ -42,7 +42,7 @@
                             <div class="input-group-prepend">
                                 <span class="input-group-text">$</span>
                             </div>
-                            <input name="add_cash" type="text" class="form-control" min="0" maxlength="16">
+                            <input name="add_cash" type="text" class="form-control" maxlength="16">
                             <div class="input-group-append">
                                 <span class="input-group-text">.00</span>
                             </div>
